--- a/.github/actions/run-e2e/action.yml
+++ b/.github/actions/run-e2e/action.yml
@@ -99,6 +99,7 @@ runs:
         docker exec shop bash -c "echo "MOLLIE_CYPRESS_MODE=1" >> /var/www/html/.env" || true;
         docker exec shop bash -c "echo "MOLLIE_PAYPAL_EXPRESS_BETA=1" >> /var/www/html/.env" || true;
         docker exec shop bash -c "echo "TEST_TOKEN='none'" >> /var/www/html/.env" || true;
+        docker exec shop bash -c "echo "MAILER_DSN=null://null" >> /var/www/html/.env" || true;
 
     # --------------------------------------------------------------------------------------------------------------------------------------
 
@@ -119,6 +120,7 @@ runs:
       run: |
         # latest composer has an issue with php 7.4 where the lock file is not read fully. you see error that shopware/core is not found
         docker exec -u root shop bash -c 'wget https://getcomposer.org/download/2.2.9/composer.phar && chmod a+x composer.phar && mv composer.phar /usr/local/bin/composer'
+        docker exec  shop bash -c 'mkdir -p /var/www/html/var/test/jwt && cp /var/www/html/config/jwt/*.pem /var/www/html/var/test/jwt && chmod 0660 /var/www/html/var/test/jwt/*.pem'
         #docker exec shop bash -c 'composer require enqueue/enqueue:0.10.23' #0.10.24 is not compatible with 7.4 even if says so
         #docker exec shop bash -c 'composer require shopware/core:${{ inputs.SHOPWARE }}' #we need to install speicific sw version
         #docker exec shop bash -c 'composer install'
@@ -144,9 +146,12 @@ runs:
       shell: bash
       run: |
         docker exec shop bash -c 'php bin/console system:config:set MolliePayments.config.testMode true'
+        docker exec shop bash -c 'php bin/console system:config:set MolliePayments.config.debugMode true'
         docker exec shop bash -c 'php bin/console system:config:set MolliePayments.config.liveApiKey ${{ inputs.MOLLIE_APIKEY_TEST }}'
         docker exec shop bash -c 'php bin/console system:config:set MolliePayments.config.testApiKey ${{ inputs.MOLLIE_APIKEY_TEST }}'
         docker exec shop bash -c 'php bin/console system:config:set MolliePayments.config.formatOrderNumber github_{ordernumber}'
+        docker exec shop bash -c 'php bin/console system:config:set core.mailerSettings.disableDelivery true'
+        docker exec shop bash -c 'php bin/console system:config:set core.mailerSettings.emailAgent ""'
         docker exec shop bash -c 'php bin/console cache:clear'
 
     # --------------------------------------------------------------------------------------------------------------------------------------
