NTR: fix typo in e2e action description
Correct "marked es deprecated" → "marked as deprecated" in
.github/actions/run-e2e/action.yml. No behavior change.

--- a/.github/actions/run-e2e/action.yml
+++ b/.github/actions/run-e2e/action.yml
@@ -31,7 +31,7 @@ inputs:
     default: ''
     required: false
   REMOVE_DEPRECATED_TESTS:
-    description: "If enabled, tests that are marked es deprecated will be removed"
+    description: "If enabled, tests that are marked as deprecated will be removed"
     default: 'false'
     required: false
   CYPRESS_RESULTS_SUFFIX:
