NTR: prepare for payments api

--- a/config/behat.yaml
+++ b/config/behat.yaml
@@ -6,3 +6,5 @@ default:
       contexts:
         - Mollie\Behat\BootstrapContext
         - Mollie\Behat\PaymentContext
+        - Mollie\Behat\CustomerContext
+        - Mollie\Behat\CheckoutContext
