--- a/.github/workflows/e2e_playground.yml
+++ b/.github/workflows/e2e_playground.yml
@@ -11,6 +11,9 @@ on:
       phpVersion:
         description: 'PHP Version'
         required: true
+      image:
+        description: 'Dockware image'
+        required: true
 
 jobs:
 
@@ -58,6 +61,7 @@ jobs:
           # -------------------------------------------
           SHOPWARE: ${{ github.event.inputs.swVersion }}
           PHP: ${{ github.event.inputs.phpVersion }}
+          IMAGE: ${{ github.event.inputs.image }}
           # -------------------------------------------
           RUN_CYPRESS: true
           MOLLIE_APIKEY_TEST: ${{ secrets.MOLLIE_APIKEY_TEST }}
