--- a/.github/workflows/nightly_pipe.yml
+++ b/.github/workflows/nightly_pipe.yml
@@ -45,66 +45,96 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - shopware: '6.7.3.0'
+          - shopware: '6.7.3.1'
             php: '8.3'
+            image: 'dockware/shopware'
           - shopware: '6.6.10.5'
             php: '8.3'
+            image: 'dockware/play'
           - shopware: '6.6.9.0'
             php: '8.2'
+            image: 'dockware/play'
           - shopware: '6.6.6.0'
             php: '8.2'
+            image: 'dockware/play'
           - shopware: '6.5.8.12'
             php: '8.2'
+            image: 'dockware/play'
           - shopware: '6.5.6.1'
             php: '8.2'
+            image: 'dockware/play'
           - shopware: '6.5.5.2'
             php: '8.2'
+            image: 'dockware/play'
           - shopware: '6.5.4.1'
             php: '8.2'
+            image: 'dockware/play'
           - shopware: '6.5.3.3'
             php: '8.2'
+            image: 'dockware/play'
           - shopware: '6.5.3.0'
             php: '8.2'
+            image: 'dockware/play'
           - shopware: '6.5.2.1'
             php: '8.2'
+            image: 'dockware/play'
           - shopware: '6.5.1.1'
             php: '8.2'
+            image: 'dockware/play'
           - shopware: '6.5.0.0'
             php: '8.2'
+            image: 'dockware/play'
           - shopware: '6.4.20.2'
             php: '8.2'
+            image: 'dockware/play'
           - shopware: '6.4.19.0'
             php: '8.2'
+            image: 'dockware/play'
           - shopware: '6.4.18.0'
             php: '8.2'
+            image: 'dockware/play'
           - shopware: '6.4.17.2'
             php: '8.1'
+            image: 'dockware/play'
           - shopware: '6.4.17.1'
             php: '8.1'
+            image: 'dockware/play'
           - shopware: '6.4.16.1'
             php: '8.1'
+            image: 'dockware/play'
           - shopware: '6.4.15.2'
             php: '8.1'
+            image: 'dockware/play'
           - shopware: '6.4.15.1'
             php: '8.1'
+            image: 'dockware/play'
           - shopware: '6.4.14.0'
             php: '8.1'
+            image: 'dockware/play'
           - shopware: '6.4.12.0'
             php: '8.0'
+            image: 'dockware/play'
           - shopware: '6.4.11.1'
             php: '8.0'
+            image: 'dockware/play'
           - shopware: '6.4.10.0'
             php: '8.0'
+            image: 'dockware/play'
           - shopware: '6.4.9.0'
             php: '8.0'
+            image: 'dockware/play'
           - shopware: '6.4.8.2'
             php: '8.0'
+            image: 'dockware/play'
           - shopware: '6.4.7.0'
             php: '8.0'
+            image: 'dockware/play'
           - shopware: '6.4.6.1'
             php: '8.0'
+            image: 'dockware/play'
           - shopware: '6.4.5.1'
             php: '8.0'
+            image: 'dockware/play'
     steps:
 
       - name: Clone Code
@@ -122,6 +152,7 @@ jobs:
           # -------------------------------------------
           SHOPWARE: ${{ matrix.shopware }}
           PHP: ${{ matrix.php }}
+          IMAGE: ${{matrix.image}}
           # -------------------------------------------
           MOLLIE_APIKEY_TEST: ${{ secrets.MOLLIE_APIKEY_TEST }}
           # -------------------------------------------
