--- a/src/Resources/app/storefront/package.json
+++ b/src/Resources/app/storefront/package.json
@@ -5,6 +5,7 @@
     "author": "Mollie B.V.",
     "devDependencies": {
         "deepmerge": "^4.2.2",
+        "webpack": "^5.102.1",
         "webpack-cli": "^6.0.1"
     }
 }
