--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "kiener/mollie-payments-plugin",
     "description": "Mollie Payments",
-    "version": "v4.19.0",
+    "version": "v5.0.0-beta1",
     "type": "shopware-platform-plugin",
     "license": "MIT",
     "authors": [
