NTR: try to fix pipeline

--- a/.github/workflows/step_review.yml
+++ b/.github/workflows/step_review.yml
@@ -34,7 +34,9 @@ jobs:
             src/Resources/app/administration/node_modules
         # -----------------------------------
       - name: Install Dependencies
-        run: make dev -B
+        run: |
+          composer self-update  
+          make dev -B
 
   # ------------------------------------------------------------------------------------------------------------------------
   # ------------------------------------------------------------------------------------------------------------------------
