NTR: test pipeline

--- a/composer.json
+++ b/composer.json
@@ -39,6 +39,9 @@
             "infection/extension-installer": true,
             "php-http/discovery": true,
             "symfony/runtime": true
+        },
+        "audit": {
+            "block-insecure": false
         }
     },
     "autoload": {
