--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "kiener/mollie-payments-plugin",
     "description": "Mollie Payments",
-    "version": "v5.0.0-beta1",
+    "version": "v5.0.0-beta2",
     "type": "shopware-platform-plugin",
     "license": "MIT",
     "authors": [
@@ -63,23 +63,21 @@
         "shopware/administration": "Require '*'. Enables features like partial shipping and refunding."
     },
     "require": {
-        "php": ">=8.0",
+        "php": ">=8.2",
         "ext-curl": "*",
-        "shopware/core": "6.4.5.0 - 6.8.0.0",
-        "shopware/administration": "6.4.5.0 - 6.8.0.0",
-        "shopware/storefront": "6.4.5.0 - 6.8.0.0",
-        "shopware/elasticsearch": "6.4.5.0 - 6.8.0.0"
+        "shopware/core": ">=6.6.10.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9",
+        "shopware/storefront": ">=6.6.10.0",
+        "phpunit/phpunit": "^11",
         "phpstan/phpstan": "^2",
         "friendsofphp/php-cs-fixer": "^3",
         "phpcompatibility/php-compatibility": "^9.3",
         "squizlabs/php_codesniffer": "^3",
         "boxblinkracer/phpunuhi": "dev-main",
         "spaze/phpstan-disallowed-calls": "^4",
-        "behat/behat": "3.15.0",
-        "behat/gherkin": "4.10.0"
+        "behat/behat": "^3",
+        "behat/gherkin": "^4"
     },
     "scripts": {
         "post-install-cmd": [
