--- a/.github/workflows/pr_pipe.yml
+++ b/.github/workflows/pr_pipe.yml
@@ -14,7 +14,7 @@ jobs:
     name: Review Pipeline
     uses: ./.github/workflows/step_review.yml
     with:
-      PHP_VERSION: 8.0
+      PHP_VERSION: 8.2
 
   # ------------------------------------------------------------------------------------------------------------------------
 
@@ -50,18 +50,9 @@ jobs:
           - shopware: '6.7.4.2'
             php: '8.3'
             image: 'dockware/shopware'
-          - shopware: '6.6.10.8'
+          - shopware: '6.6.10.9'
             php: '8.2'
-            image: 'dockware/play'
-          - shopware: '6.6.10.0'
-            php: '8.2'
-            image: 'dockware/play'
-          - shopware: '6.5.8.0'
-            php: '8.2'
-            image: 'dockware/play'
-          - shopware: '6.4.20.2'
-            php: '8.2'
-            image: 'dockware/play'
+            image: 'dockware/shopware'
     steps:
 
       - name: Clone Code
