--- a/config/.phpstan.neon
+++ b/config/.phpstan.neon
@@ -2,6 +2,7 @@ parameters:
     level: 8
     paths:
         - ./../src
+        - ./../shopware
     excludePaths:
         - ./../src/Resources/*
         - ./../src/Migration/*
