update phpstan errors

--- a/config/.phpstan.neon
+++ b/config/.phpstan.neon
@@ -35,6 +35,7 @@ parameters:
     		- identifier: parameter.unresolvableType
     		- identifier: varTag.unresolvableType
     		- identifier: attribute.notFound
+    		- identifier: function.alreadyNarrowedType
 
 services:
     - class: MolliePayments\Shopware\PHPStan\Rules\NoManufacturerRule
