--- a/.github/actions/run-e2e/action.yml
+++ b/.github/actions/run-e2e/action.yml
@@ -153,7 +153,7 @@ runs:
     - name: Install Fixtures
       shell: bash
       run: |
-        docker exec shop bash -c 'php bin/console mollie:fixtures:install --force'
+        docker exec shop bash -c 'php bin/console mollie:fixtures:load'
 
     # --------------------------------------------------------------------------------------------------------------------------------------
 
