NTR: fix cypress for testing system

--- a/tests/Cypress/makefile
+++ b/tests/Cypress/makefile
@@ -16,51 +16,48 @@ clean: ## Clean all dependencies
 # ---------------------------------------------------------------------------------------------
 
 open-ui: ## Opens Cypress UI
+ifndef url
+	$(warning please use url= as argument)
+	@exit 1
+endif
+ifndef shopware
+	$(warning please use shopware= as argument)
+	@exit 1
+endif
+ifndef storeApiKey
+	$(warning please use storeApiKey= as argument)
+	@exit 1
+endif
 	@echo ""
 	@echo "*********************************************************************************************************"
 	@echo "ATTENTION, please enable MOLLIE_CYPRESS_MODE=1 in your .env to allow subscriptions without webhooks, if you cant provide webhooks!"
 	@echo "*********************************************************************************************************"
 	@echo ""
-ifndef url
-	$(warning Please provide the URL argument to Start Cypress!)
-	@exit 1
-endif
-ifndef shopware
-	$(warning Please provide the Shopware Version as argument to Start Cypress!)
-	@exit 1
-endif
-ifndef storeApiKey
-	storeApiKey=''
-endif
 	CYPRESS_BASE_URL=$(url) CYPRESS_SHOPWARE=$(shopware) CYPRESS_STORE_APIKEY=$(storeApiKey) ./node_modules/.bin/cypress open
 
 # ---------------------------------------------------------------------------------------------
 
 run: ## Runs all E2E tests for Shopware
+ifndef url
+	$(warning please use url= as argument)
+	@exit 1
+endif
+ifndef shopware
+	$(warning please use shopware= as argument)
+	@exit 1
+endif
+ifndef storeApiKey
+	$(warning please use storeApiKey= as argument)
+	@exit 1
+endif
 	@echo ""
 	@echo "*********************************************************************************************************"
 	@echo "ATTENTION, please enable MOLLIE_CYPRESS_MODE=1 in your .env to allow subscriptions without webhooks, if you cant provide webhooks!"
 	@echo "*********************************************************************************************************"
 	@echo ""
-ifndef url
-	$(warning Please provide the URL argument to Start Cypress!)
-	@exit 1
-endif
-ifndef shopware
-	$(warning Please provide the Shopware Version as argument to Start Cypress!)
-	@exit 1
-endif
-ifndef storeApiKey
-	storeApiKey=''
-endif
 	CYPRESS_BASE_URL=$(url) CYPRESS_SHOPWARE=$(shopware) CYPRESS_STORE_APIKEY=$(storeApiKey) ./node_modules/.bin/cypress run --headless --env filters="$(filters)"
 
 parallel: ## Runs all E2E tests for Shopware in parallel
-	@echo ""
-	@echo "*********************************************************************************************************"
-	@echo "ATTENTION, please enable MOLLIE_CYPRESS_MODE=1 in your .env to allow subscriptions without webhooks, if you cant provide webhooks!"
-	@echo "*********************************************************************************************************"
-	@echo ""
 ifndef url
 	$(warning Please provide the URL argument to Start Cypress!)
 	@exit 1
@@ -70,8 +67,14 @@ ifndef shopware
 	@exit 1
 endif
 ifndef storeApiKey
-	storeApiKey=''
+	$(warning please use storeApiKey= as argument)
+	@exit 1
 endif
+	@echo ""
+	@echo "*********************************************************************************************************"
+	@echo "ATTENTION, please enable MOLLIE_CYPRESS_MODE=1 in your .env to allow subscriptions without webhooks, if you cant provide webhooks!"
+	@echo "*********************************************************************************************************"
+	@echo ""
 	CYPRESS_BASE_URL=$(url) CYPRESS_SHOPWARE=$(shopware) CYPRESS_STORE_APIKEY=$(storeApiKey) npx concurrently \
 		"./node_modules/.bin/cypress run --headless --env filters=\"$(filters)\",split=3,splitIndex=0" \
 		"./node_modules/.bin/cypress run --headless --env filters=\"$(filters)\",split=3,splitIndex=1" \
