--- a/.github/workflows/pr_pipe.yml
+++ b/.github/workflows/pr_pipe.yml
@@ -47,7 +47,10 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - shopware: '6.7.5.0'
+          - shopware: '6.7.6.0'
+            php: '8.3'
+            image: 'dockware/shopware'
+          - shopware: '6.7.5.1'
             php: '8.3'
             image: 'dockware/shopware'
           - shopware: '6.6.10.5'
