--- a/.github/workflows/ci_pipe.yml
+++ b/.github/workflows/ci_pipe.yml
@@ -57,7 +57,10 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - shopware: '6.7.6.0'
+          - shopware: '6.7.7.0'
+            php: '8.3'
+            image: 'dockware/shopware'
+          - shopware: '6.7.6.2'
             php: '8.3'
             image: 'dockware/shopware'
           - shopware: '6.7.5.1'
